<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".citiesList.ListOfCitiesActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_city_name"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"/>
    <RelativeLayout
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">
        <TextView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>
        <ImageButton
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_black_24dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/cancel_btn"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/dark_grey"/>
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/search_btn"
            android:hint="@string/search"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:imeOptions="actionSearch"
            android:lines="1"
            android:inputType="text"
            android:textColorHint="@color/dark_grey"/>
    </RelativeLayout>
</RelativeLayout>