<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/darker_grey">
    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/city_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/thunder"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_75"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_95"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>
    <TextView
        android:id="@+id/city_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xx_xx"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_5" />
    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/a_city_name"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/city_weather"
        app:layout_constraintStart_toStartOf="@id/city_weather"
        app:layout_constraintEnd_toEndOf="@id/guideline_75" />
    <TextView
        android:id="@+id/temperature"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textSize="45sp"
        android:textColor="@color/white"
        android:text="@string/xxx"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_75" />
</androidx.constraintlayout.widget.ConstraintLayout>