<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailled.DetailledActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_10"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/thunder"
        android:scaleType="centerCrop"/>
    <ImageView
        android:id="@+id/kind_of_blur"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@color/blackTransparent"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_margin="20dp"/>

    <RelativeLayout
        android:id="@+id/top_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/guideline_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/name_of_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_city"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_centerHorizontal="true" />
        <TextView
            android:id="@+id/current_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_description"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_below="@id/name_of_city"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/big_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/top_relative_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/big_current_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xxx"
            android:textColor="@color/white"
            android:textSize="70sp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/big_weather_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:id="@+id/current_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true">
            <TextView
                android:id="@+id/current_day_of_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_of_week"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/current_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                android:text="@string/xxx_"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/current_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/xxx_"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@id/current_min_temp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/first_separator"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_grey"
            android:layout_below="@id/current_time_layout"/>
        <ListView
            android:id="@+id/days_forecast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/first_separator"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <RelativeLayout
                android:id="@+id/humidity_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <TextView
                    android:id="@+id/humidity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/xxx_"
                    android:textSize="20sp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/separator_3"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"
                android:layout_below="@id/humidity_layout"/>

            <RelativeLayout
                android:id="@+id/wind_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/separator_3">
                <TextView
                    android:id="@+id/wind_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wind"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/xxx_"
                    android:textSize="20sp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/separator_2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_grey"
                android:layout_below="@id/wind_layout"/>
            <RelativeLayout
                android:id="@+id/pressure_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/separator_2">
                <TextView
                    android:id="@+id/pressure_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_alignParentStart="true"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/pressure_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/xxx_"
                    android:textSize="20sp"
                    android:layout_marginEnd="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>